--- a/README
+++ b/README
@@ -11,10 +11,12 @@ Scheme, the next step for Mes is mescc: a C compiler/linker to
 boostrap into GNU Gcc and GNU Guile, possibly via Tiny-CC.
 
 It currently has an interpreter written in C (mes) with Garbage
-Collector (Jam Scraper), a library of loadable Scheme modules with
-test suite just barely enough to support a simple REPL (repl.mes) and
-a proof-of-concept c-compiler (mescc.mes) that produces an elf from
-the simplest of C files.
+Collector (Jam Scraper), a library of loadable Scheme modules--
+notably [[https://github.com/schemeway/lalr-scm][Dominique Boucher's LALR]], [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][Pre-R6RS portable syntax-case]] with
+R7RS ellipsis, [[http://www.nongnu.org/nyacc/][Nyacc]] and [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][Guile's PEG]] --and test suite just barely
+enough to support a simple REPL (repl.mes) and a proof-of-concept
+C-compiler (mescc.mes) that produces an elf from the simplest of C
+files.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf][LISP-1.5]] -- John
 McCarthy page 13.
@@ -43,7 +45,13 @@ General Public Licence version 3 or later.  See the file COPYING.
 * Other
 
    make check
-   make guile-check
    make mes-check
    make paren
    make mescc
+   scripts/nyacc-calc.mes
+   scripts/nyacc.mes
+
+   make guile-check
+   make guile-mescc
+   guile/nyacc-calc.scm
+   scripts/nyacc.scm
