--- a/NEWS
+++ b/NEWS
@@ -12,19 +12,58 @@ Please send Mes bug reports to janneke@gnu.org.
 
 * Changes in 0.4 since 0.3
 ** Core
-*** Smaller C-reader
+*** Improved performance.
+Macros are now memoized; after expansion and before eval'ing the
+expanded form, their input s-expression is replaced by the expansion.
+This yields a nice performance improvement which finally allowed
+moving all non-essential bits from the C-core into Scheme...including
+the reader.  The Scheme reader is much, much slower than the previous
+C version, making Mes--again-- feel slow.  Think of that as a feature.
+*** Bootstrap with minimal reader in C.
 The C-reader needs only support reading of words and lists
-(s-expressions), line-comments.  Quoting, characters, strings,
-block-comments are all handled by the Scheme reader later.
+(s-expressions), line-comments to read the initial [[file:module/mes/read-0.mes][Scheme reader]] which
+then takes over and handles reading of quoting, characters, strings,
+block-comments.
+*** Reduced size.
+Total C size: ~1500LOC.  The main Mes evaluator is now ~1000LOC
+including cell creation and garbage collector.  This code is able to
+execute a Scheme progam that has been loaded into memory.  Another
+~500LOC is spent to load a minimal Scheme program and to dump it, to
+provide a small posix interface, math functions and do some error
+reporting.
+*** Programs can be dumped and loaded using --dump and --load.
 ** Language
-*** Keywords are supported.
+*** Minimal syntactic exception support for Nyacc.
+*** Minimal syntactic fluids support for Nyacc.
+*** Keywords are now supported.
 *** Cond now supports =>.
-*** Lambda* and define* are now supported.
-*** #;-comment is now supported.
-*** Non-nested #| |#-comment is now supported.
+*** Guile's optargs: lambda* and define* are now supported.
+*** #;-comments are now supported.
+*** Non-nested #| |#-comments are now supported.
+*** Quasisyntax is now supported.
 *** R7RS syntax-rules with custom ellipsis, with-ellipsis are now supported.
+*** 9 new [partial] modules
+(mes fluids), (mes nyacc), (mes optargs), (mes pmatch), (mes peg),
+(srfi srfi-13), (srfi srfi-9-psyntax), (srfi srfi-26), (srfi srfi-43),
+(rnrs arithmetic bitwise), (sxml xpath)
+*** 36 new functions
+1+, 1-, abs, and=>, append-reverse, ash, char<=?, char<?, char>=?,
+char>?, even?, filter, delete, delq, vector-copy, fold, fold-right,
+getenv, iota, keyword->symbol list-head, list-tail, negative?, odd?,
+positive?, remove!, remove, string->number, string-copy,
+string-prefix?, string=, string=?, symbol->keyword symbol-append,
+symbol-prefix?, unless, write, zero?.
 ** Noteworthy bug fixes
+*** Macros are now memoized.
+*** An error is reported when using a wrong number of arguments with a call.
+*** Cond now evaluates its test clauses only once.
+*** Append can also handle one argument.
+*** For-each now supports 2 list arguments.
+*** Map now supports 3 list arguments.
+*** Backslash in string is supported.
 *** Closure is not a pair.
+*** All standard characters are supported.
+*** Mescc now also runs in Guile.
 * Changes in 0.3 since 0.2
 ** Core
 *** Number-based rather than pointer-based cells.
