test: Add nyacc cpp match tests; two fail.
* tests/match.test ("match nyacc 0", "match nyacc 1"): New tests.
 ("match nyacc simple", "match nyacc tkl0"): New tests; FAIL with Mes.
 (report): Set failure expectation to 2 for Mes.
* HACKING: Add to bugs.

--- a/HACKING
+++ b/HACKING
@@ -73,6 +73,7 @@ syntax-case]] with R7RS ellipsis, [[http://www.nongnu.org/nyacc/][Nyacc]] and [[
 time to start doing something useful.
 
 * Bugs
+** test/match.test ("nyacc-simple"): hygiene problem in match
 ** The Scheme reader is very slow.
 ** Fluids are a hack for Nyacc.
 ** Prototype mes.c depends on a C compiler.
