--- a/HACKING
+++ b/HACKING
@@ -17,9 +17,9 @@
      4d. scaffold/tiny-mes.c: load memory dump, run simple sexp
      4e. scaffold/t.c: run c test suite with scripts/mescc.mes
   5. scripts/mescc.mes: C compiler on mes, that can build scaffold/mini-mes.c
-     5x. *we are here, any more steps to reach 5*
-     rm -f a.out; MES_DEBUG=1 scripts/mescc.mes scaffold/mini-mes.c > a.out
-     5a. remove __MESC__/__NYAC__ C workarounds in gc.c
+     5a. remove __MESC__/__NYACC__ C workarounds in gc.c
+     5x. *we are here*
+     scripts/mescc.mes scaffold/mini-mes OR make mes-mini-mes
      5b. module/language/c99/compiler.mes: refactor expr->arg, expr->accu, ast->info
      5c. merge *.c into scaffold/mini-mes.c
      5d. merge scaffold/mini-mes.c into mes.c
