--- a/README
+++ b/README
@@ -1,25 +1,26 @@
                                                               -*- org -*-
 Mes -- Maxwell Equations of Software
 
-Mes aims to create an entirely source-based bootstrapping path.  The
-target is to [have GuixSD] boostrap from a minimal, easily inspectable
-binary --that should be readable as source-- into something close to
-R6RS Scheme.
+Mes aims to create full source bootstrapping for GuixSD: an entirely
+source-based bootstrap path.  The target is to [have GuixSD] boostrap
+from a minimal, easily inspectable binary --that should be readable as
+source-- into something close to R6RS Scheme.
 
-As bootstrapping is presumably easiest and probably most fun with
-Scheme, the next step for Mes is mescc: a C compiler/linker to
-boostrap into GNU Gcc and GNU Guile, possibly via Tiny-CC.
+It currently consists of a mutual self-hosting [close to Guile-]
+Scheme interpreter prototype in C and a Nyacc-based C compiler in
+[Guile] Scheme.
 
-It currently has an interpreter written in C (mes) with Garbage
-Collector (Jam Scraper), a library of loadable Scheme modules--
-notably [[https://github.com/schemeway/lalr-scm][Dominique Boucher's LALR]], [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][Pre-R6RS portable syntax-case]] with
-R7RS ellipsis, [[http://www.nongnu.org/nyacc/][Nyacc]] and [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][Guile's PEG]] --and test suite just barely
-enough to support a simple REPL (repl.mes) and a proof-of-concept
-C-compiler (mescc.mes) that produces an elf from the simplest of C
-files.
+The Scheme interpreter prototype (mes.c) has a Garbage Collector, a
+library of loadable Scheme modules-- notably [[https://github.com/schemeway/lalr-scm][Dominique Boucher's LALR]],
+[[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][Pre-R6RS portable syntax-case]] with R7RS ellipsis, [[http://www.nongnu.org/nyacc/][Matt Wette's Nyacc]]
+and [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][Guile's PEG]] --and test suite just barely enough to support a
+simple REPL (repl.mes) and simple C-compiler (mescc.mes) that can
+produce the second initial ELF binary from binary from mes.c, in only
+about 2h30'.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf][LISP-1.5]] -- John
-McCarthy page 13.
+McCarthy page 13, [[https://www.gnu.org/software/guix/][GNU Guix's]] source/binary packaging transparency and
+[[https://github.com/oriansj/stage0][Jeremiah Orians's stage0]] bootstrap project.
 
 Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file COPYING.
@@ -42,16 +43,3 @@ General Public Licence version 3 or later.  See the file COPYING.
 
    scripts/mescc.mes doc/examples/main.c > a.out
 
-* Other
-
-   make check
-   make mes-check
-   make paren
-   make mescc
-   scripts/nyacc-calc.mes
-   scripts/nyacc.mes
-
-   make guile-check
-   make guile-mescc
-   guile/nyacc-calc.scm
-   scripts/nyacc.scm
