nyacc: Update to 0.78.

--- a/module/nyacc/ChangeLog
+++ b/module/nyacc/ChangeLog
@@ -1,3 +1,26 @@
+2017-05-06  Matt Wette  <mwette@alumni.caltech.edu>
+
+	* lalr.scm: updated write-lalr-tables and write-lalr-actions to
+	accept a prefix string
+
+2017-05-04  Matt Wette  <mwette@alumni.caltech.edu>
+
+	* lang/c99/pprint.scm (pretty-print-c99): removed double spacing
+	in printed declarations
+
+	* lang/util.scm (make-pp-formatter): fixed bug in column counting
+	that prevented line-wrap to occur.
+
+2017-04-12  Matt Wette  <mwette@alumni.caltech.edu>
+
+	* lex.scm (make-comm-reader): comments which end in newline can
+	now also end in #<eof>
+
+2017-03-11  Matt Wette  <mwette@alumni.caltech.edu>
+
+	* lang/c99/parser.scm (parse-c99): added mode keyword argument to
+	gen-c-lexer, file mode would not have been working ...
+
 2017-03-03  Matt Wette  <mwette@alumni.caltech.edu>
 
 	* lalr.scm: added "keepers" keyword argument to compact-machine
