--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,9 @@ Portable syntax-case from Chez Scheme; patches from Guile
 module/mes/psyntax.ss
 module/mes/psyntax.pp [generated]
 
+Getopt-long from Guile
+module/mes/getopt-long.scm
+
 Optargs from Guile
 module/mes/optargs.scm
 
